<resources>
    <string name="app_name">GoodBoy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">GoodBoy</string>
    <string name="home">Home</string>
    <string name="organization">Organization</string>
    <string name="events">Events</string>
    <string name="adoption">Adoption</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="user">User</string>
    <string name="login">Login</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="dogId">ID</string>
    <string name="dogBreed">Breed</string>
    <string name="dogColor">Color</string>
    <string name="dogCondition">Condition</string>
    <string name="dogOrganization">Organization</string>
    <string name="dogGender">Gender</string>
    <string name="dogAge">Age</string>
    <string name="dogSize">Size</string>
    <string name="eventID">ID</string>
    <string name="eventName">Name</string>
    <string name="eventDesc">Description</string>
    <string name="eventDateTime"><![CDATA[Date & Time]]></string>
    <string name="eventLocation">Location</string>
    <string name="eventOrganizer">Organizer</string>
    <string name="userName">Username</string>
    <string name="userPassword">Password</string>
    <string name="userRealName">Real Name</string>
    <string name="userAddress">Address</string>
    <string name="userContactNo">Contact Number</string>
    <string name="userAge">Age</string>
    <string name="userGender">Gender</string>
    <string name="userICNo">IC Number</string>
    <string name="organizationId">ID</string>
    <string name="organizationName">Name</string>
    <string name="organizationLocation">Location</string>
    <string name="organizationOwner">Owner</string>
    <string name="organizationPhoneNo">Phone Number</string>
    <string name="pref_file">prefFile</string>
    <string name="register">Register</string>
    <string-array name="searchCategory">
        <item>Breed</item>
        <item>Color</item>
        <item>Age</item>
        <item>Organization</item>
        <item>Gender</item>
    </string-array>
    <string name="organisationDetails">Organisation Details</string>
    <string name="eventDetails">Event Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_description_here">Enter description here</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="enter_subject_here">Enter subject here</string>
    <string name="send">Send</string>
    <string name="search_by_breed">Search by breed</string>
    <string name="search_by_organization">Search by organization</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="passwordHint">Password</string>
    <string name="usernameHint">Username</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="recommended_dogs">Recommended Dogs</string>
    <string name="search_here">Search here</string>
    <string name="search_by">Search by:</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="adopt">Adopt</string>
</resources>
