<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_organization"
            android:icon="@drawable/ic_love"
            android:title="@string/organization" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/events_icon"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_adoption"
            android:icon="@drawable/ic_done_dog"
            android:title="@string/adoption" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_lightbulb_outline_black_24dp"
            android:title="@string/feedback" />
    </group>

    <item android:title="@string/user">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_lock_open_black_24dp"
                android:title="@string/login" />
            <item
                android:id="@+id/nav_register"
                android:icon="@drawable/ic_account_box_black_24dp"
                android:title="@string/register" />
        </menu>
    </item>

</menu>
